--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,7 +45,7 @@
 			   
 
 			  <div class="dropdown">
-			    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			    <button style='width:300em;' class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			      <%= x %>
 			    </button>
 					<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
